<resources>
    <string name="app_name">ABC-Tracking</string>
    <string name="name_text">Name</string>
    <string name="surname_text">Surname</string>
    <string name="age_text">Age</string>
    <string name="add_child_button">Add child</string>
    <string name="name_surname_empty_fail">Please write at least name and surname</string>
    <string name="delete_child_button">Delete</string>
    <string name="cancel_child_button">Cancel</string>
    <string name="save_child_button">Save</string>
    <string name="open_children_button">Children</string>
    <string name="open_abcdata_button">ABC data</string>
    <string name="title_activity_abc_data">AbcDataActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- ABC master data activity -->
    <string name="abcMaster_title">Add/Update ABC data</string>
    <string name="abcMdName_text">Name</string>
    <string name="abcMdDesc_text">Description</string>
    <string name="abcMdType_text">Type</string>
    <string name="abcMdName_empty_fail">Please fill name at least</string>
    <string name="abcMdData_used_fail">Data can not be deleted. It is used.</string>
    <string name="save_abcMdData_button">Save</string>
    <string name="delete_abcMdData_button">Delete</string>
    <string name="cancel_abcMdData_button">Cancel</string>

    <!-- ABC master data view page adapter -->
    <string name="antecedent_tab_title">Antecedent</string>
    <string name="behavior_tab_title">Behavior</string>
    <string name="consequence_tab_title">Consequence</string>

    <string name="children_list_title">Children list</string>
    <!-- Child main activity -->
    <string name="child_main_title">Child detail</string>
    <string name="child_main_open_abc_config_button">Configure ABC form</string>
    <string name="child_main_open_abc_button">ABC form</string>
    <string name="child_main_open_abc_data_button">ABC Data history</string>
    <string name="child_main_open_behavior_config_button">Configure behavior form</string>
    <string name="child_main_open_behavior_button">Collect behavior data</string>
    <string name="child_main_open_behavior_data_button">Behavior data history</string>

</resources>
